--- a/hotel-service/pom.xml
+++ b/hotel-service/pom.xml
@@ -65,12 +65,12 @@
             <artifactId>microprofile</artifactId>
         </dependency>
 
-        <!-- LRA JAXRS filters -->
+        <!-- LRA JAXRS filters
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>lra-filters</artifactId>
             <version>5.7.0.Final</version>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>org.jboss.narayana.javaone.lrademo</groupId>
